--- a/report/main.bib
+++ b/report/main.bib
@@ -61,3 +61,14 @@
   year={2016},
   publisher={Nature Publishing Group}
 }
+
+@article{kording2001,
+  title={Supervised and unsupervised learning with two sites of synaptic integration},
+  author={K{\"o}rding, Konrad P and K{\"o}nig, Peter},
+  journal={Journal of computational neuroscience},
+  volume={11},
+  number={3},
+  pages={207--215},
+  year={2001},
+  publisher={Springer}
+}
