Log 19/01/19c - Pretty Printing

--- a/workspace_guergiev.ipynb
+++ b/workspace_guergiev.ipynb
@@ -181,7 +181,44 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid| epoch  1| batch 5000/47995| acc: 0.8446| loss: 1.0000| time: 18.93\n",
+      "Train| epoch  1| batch 5000/47995| acc: 0.0680| loss: 1.0000| time: 18.93\n",
+      "-------------------------------------------------------------------------\n",
+      "Valid| epoch  1| batch 10000/47995| acc: 0.8918| loss: 1.0000| time: 18.79\n",
+      "Train| epoch  1| batch 10000/47995| acc: 0.0896| loss: 1.0000| time: 18.79\n",
+      "-------------------------------------------------------------------------\n",
+      "Valid| epoch  1| batch 15000/47995| acc: 0.8684| loss: 1.0000| time: 18.39\n",
+      "Train| epoch  1| batch 15000/47995| acc: 0.0921| loss: 1.0000| time: 18.39\n",
+      "-------------------------------------------------------------------------\n",
+      "Valid| epoch  1| batch 20000/47995| acc: 0.9055| loss: 1.0000| time: 18.10\n",
+      "Train| epoch  1| batch 20000/47995| acc: 0.0938| loss: 1.0000| time: 18.10\n",
+      "-------------------------------------------------------------------------\n",
+      "Valid| epoch  1| batch 25000/47995| acc: 0.8981| loss: 1.0000| time: 18.74\n",
+      "Train| epoch  1| batch 25000/47995| acc: 0.0934| loss: 1.0000| time: 18.74\n",
+      "-------------------------------------------------------------------------\n",
+      "Valid| epoch  1| batch 30000/47995| acc: 0.9124| loss: 1.0000| time: 18.55\n",
+      "Train| epoch  1| batch 30000/47995| acc: 0.0947| loss: 1.0000| time: 18.55\n",
+      "-------------------------------------------------------------------------\n",
+      "Valid| epoch  1| batch 35000/47995| acc: 0.9255| loss: 1.0000| time: 18.59\n",
+      "Train| epoch  1| batch 35000/47995| acc: 0.0943| loss: 1.0000| time: 18.59\n",
+      "-------------------------------------------------------------------------\n",
+      "Valid| epoch  1| batch 40000/47995| acc: 0.8965| loss: 1.0000| time: 18.59\n",
+      "Train| epoch  1| batch 40000/47995| acc: 0.0952| loss: 1.0000| time: 18.59\n",
+      "-------------------------------------------------------------------------\n",
+      "Valid| epoch  1| batch 45000/47995| acc: 0.9279| loss: 1.0000| time: 19.28\n",
+      "Train| epoch  1| batch 45000/47995| acc: 0.0967| loss: 1.0000| time: 19.28\n",
+      "-------------------------------------------------------------------------\n",
+      "Valid| epoch  2| batch 5000/47995| acc: 0.9227| loss: 1.0000| time: 27.20\n",
+      "Train| epoch  2| batch 5000/47995| acc: 0.1545| loss: 1.0000| time: 27.20\n",
+      "-------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# silence 80% of feedback weights\n",
     "cdl.use_sparse_feedback = False\n",
@@ -197,7 +234,7 @@
     "net = cdl.Network(n, X_train, y_train)\n",
     "\n",
     "# train the network\n",
-    "net.train(f_etas, b_etas, n_epochs)"
+    "net.train(f_etas, b_etas, n_epochs, log_freq=5000, verbose=True, logging=False)"
    ]
   },
   {
