--- a/workspace_guergiev.ipynb
+++ b/workspace_guergiev.ipynb
@@ -31,6 +31,8 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
+    "%load_ext line_profiler\n",
+    "\n",
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
    ]
@@ -106,11 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Import log-helper/learning plot functions\n",
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,16 +166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_model(\"dnn\", dnn_model, 10,\n",
-    "                    X_train, y_train, batch_size,\n",
-    "                    device, optimizer, criterion,\n",
-    "                    log_freq = 5000,\n",
-    "                    model_fname =\"temp_model_dnn_mnist\",\n",
-    "                    verbose=True, logging=True)"
+    "# silence 80% of feedback weights\n",
+    "cdl.use_sparse_feedback = False\n",
+    "\n",
+    "# set training parameters\n",
+    "f_etas = (0.21, 0.21)\n",
+    "b_etas = None\n",
+    "n_epochs = 1\n",
+    "n_training_examples = X_train.shape[1]\n",
+    "\n",
+    "n=(500, 10)\n",
+    "# create the network -- this will also load the MNIST dataset files\n",
+    "net = cdl.Network(n, X_train, y_train)"
    ]
   },
   {
@@ -183,66 +190,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Valid| epoch  1| batch 5000/47995| acc: 0.8446| loss: 1.0000| time: 18.93\n",
-      "Train| epoch  1| batch 5000/47995| acc: 0.0680| loss: 1.0000| time: 18.93\n",
-      "-------------------------------------------------------------------------\n",
-      "Valid| epoch  1| batch 10000/47995| acc: 0.8918| loss: 1.0000| time: 18.79\n",
-      "Train| epoch  1| batch 10000/47995| acc: 0.0896| loss: 1.0000| time: 18.79\n",
-      "-------------------------------------------------------------------------\n",
-      "Valid| epoch  1| batch 15000/47995| acc: 0.8684| loss: 1.0000| time: 18.39\n",
-      "Train| epoch  1| batch 15000/47995| acc: 0.0921| loss: 1.0000| time: 18.39\n",
-      "-------------------------------------------------------------------------\n",
-      "Valid| epoch  1| batch 20000/47995| acc: 0.9055| loss: 1.0000| time: 18.10\n",
-      "Train| epoch  1| batch 20000/47995| acc: 0.0938| loss: 1.0000| time: 18.10\n",
-      "-------------------------------------------------------------------------\n",
-      "Valid| epoch  1| batch 25000/47995| acc: 0.8981| loss: 1.0000| time: 18.74\n",
-      "Train| epoch  1| batch 25000/47995| acc: 0.0934| loss: 1.0000| time: 18.74\n",
-      "-------------------------------------------------------------------------\n",
-      "Valid| epoch  1| batch 30000/47995| acc: 0.9124| loss: 1.0000| time: 18.55\n",
-      "Train| epoch  1| batch 30000/47995| acc: 0.0947| loss: 1.0000| time: 18.55\n",
-      "-------------------------------------------------------------------------\n",
-      "Valid| epoch  1| batch 35000/47995| acc: 0.9255| loss: 1.0000| time: 18.59\n",
-      "Train| epoch  1| batch 35000/47995| acc: 0.0943| loss: 1.0000| time: 18.59\n",
-      "-------------------------------------------------------------------------\n",
-      "Valid| epoch  1| batch 40000/47995| acc: 0.8965| loss: 1.0000| time: 18.59\n",
-      "Train| epoch  1| batch 40000/47995| acc: 0.0952| loss: 1.0000| time: 18.59\n",
-      "-------------------------------------------------------------------------\n",
-      "Valid| epoch  1| batch 45000/47995| acc: 0.9279| loss: 1.0000| time: 19.28\n",
-      "Train| epoch  1| batch 45000/47995| acc: 0.0967| loss: 1.0000| time: 19.28\n",
-      "-------------------------------------------------------------------------\n",
-      "Valid| epoch  2| batch 5000/47995| acc: 0.9227| loss: 1.0000| time: 27.20\n",
-      "Train| epoch  2| batch 5000/47995| acc: 0.1545| loss: 1.0000| time: 27.20\n",
-      "-------------------------------------------------------------------------\n"
+      "/Users/rtl/Dropbox/PHD_ECN/COURSES/WiSe_2018_Models_of_Neural_Systems/PROJECT/CODE/models/CompDNN.py:674: RuntimeWarning: invalid value encountered in log\n",
+      "  cross_ent_loss += np.log(prob_sel_num)\n"
      ]
     }
    ],
    "source": [
-    "# silence 80% of feedback weights\n",
-    "cdl.use_sparse_feedback = False\n",
-    "\n",
-    "# set training parameters\n",
-    "f_etas = (0.21, 0.21)\n",
-    "b_etas = None\n",
-    "n_epochs = 10\n",
-    "n_training_examples = X_train.shape[1]\n",
-    "\n",
-    "n=(500, 10)\n",
-    "# create the network -- this will also load the MNIST dataset files\n",
-    "net = cdl.Network(n, X_train, y_train)\n",
-    "\n",
-    "# train the network\n",
-    "net.train(f_etas, b_etas, n_epochs, log_freq=5000, verbose=True, logging=False)"
+    "net.train(f_etas, b_etas, n_epochs,\n",
+    "          log_freq=10000, verbose=True, logging=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
