Log 19/01/19e - Cross-Entropy Loss

--- a/workspace_guergiev.ipynb
+++ b/workspace_guergiev.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +190,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/rtl/Dropbox/PHD_ECN/COURSES/WiSe_2018_Models_of_Neural_Systems/PROJECT/CODE/models/CompDNN.py:674: RuntimeWarning: invalid value encountered in log\n",
-      "  cross_ent_loss += np.log(prob_sel_num)\n"
+      "Train| epoch  1| batch 10000/47995| acc: 0.8711| loss: 3.3187| time: 28.73\n",
+      "Valid| epoch  1| batch 10000/47995| acc: 0.8724| loss: 3.3080| time: 28.73\n",
+      "-------------------------------------------------------------------------\n"
      ]
     }
    ],
