Log 19/01/19f - Weight Logging

--- a/workspace_guergiev.ipynb
+++ b/workspace_guergiev.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
     "# set training parameters\n",
     "f_etas = (0.21, 0.21)\n",
     "b_etas = None\n",
-    "n_epochs = 1\n",
+    "n_epochs = 10\n",
     "n_training_examples = X_train.shape[1]\n",
     "\n",
     "n=(500, 10)\n",
@@ -193,15 +193,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train| epoch  1| batch 10000/47995| acc: 0.8711| loss: 3.3187| time: 28.73\n",
-      "Valid| epoch  1| batch 10000/47995| acc: 0.8724| loss: 3.3080| time: 28.73\n",
+      "Train| epoch  1| batch 5000/47995| acc: 0.8768| loss: 3.2170| time: 18.12\n",
+      "Valid| epoch  1| batch 5000/47995| acc: 0.8722| loss: 3.3542| time: 18.12\n",
+      "-------------------------------------------------------------------------\n",
+      "Train| epoch  1| batch 10000/47995| acc: 0.8534| loss: 3.1922| time: 12.71\n",
+      "Valid| epoch  1| batch 10000/47995| acc: 0.8489| loss: 3.2730| time: 12.71\n",
+      "-------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rtl/Dropbox/PHD_ECN/COURSES/WiSe_2018_Models_of_Neural_Systems/PROJECT/CODE/models/CompDNN_helpers.py:62: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  fr_n_param = np.linalg.norm(temp_param)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train| epoch  1| batch 15000/47995| acc: 0.8928| loss: 2.6360| time: 12.01\n",
+      "Valid| epoch  1| batch 15000/47995| acc: 0.8933| loss: 2.6416| time: 12.01\n",
+      "-------------------------------------------------------------------------\n",
+      "Train| epoch  1| batch 20000/47995| acc: 0.9254| loss: 1.9417| time: 11.20\n",
+      "Valid| epoch  1| batch 20000/47995| acc: 0.9213| loss: 2.0449| time: 11.20\n",
       "-------------------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
     "net.train(f_etas, b_etas, n_epochs,\n",
-    "          log_freq=10000, verbose=True, logging=True)"
+    "          log_freq=5000, verbose=True, logging=True)"
    ]
   },
   {
